syntax = "proto3";

option csharp_namespace = "GRPCPrototype.Library";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  Complex complex = 2;
}

message Complex {
  string id = 1;
  string name = 2;
  string date = 3;
}